storage-services/infrastructure/client-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  labels:
   app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
     containers:
     - name: client-service
       image: 447795736826.dkr.ecr.eu-west-2.amazonaws.com/students:react-app
       ports:
       - containerPort: 80
         #env:
               #- name: REACT_APP_API
               #j  value: http://ac88a44a6935711e982b602f197ebe6f-1529281652.eu-west-2.elb.amazonaws.com/api/ 
     imagePullSecrets:  
       - name: tcg
