storage-services/infrastructure/client-pod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client-deployment
  labels:
   app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
     containers:
     - name: client
       image: moralss/react-client
       imagePullPolicy: Never
       ports:
       - containerPort: 80
