storage-services/infrastructure/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
       app: server
    spec:
      containers:
      - name: server-cluster-ip-service
        image: tcgdockerregistry.azurecr.io/moral-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3003
      imagePullSecrets:  
        - name: tcg
