storage-services/infrastructure/server-pod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
     app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server-api
        image: moralss/server
        imagePullPolicy: Never
        ports:
        - containerPort: 3003
