storage-services/infrastructure/client-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30005
      protocol: TCP
  selector:
    component: web


~                                                                                                                                                     
~                                                                                                                                                     
~                                                                                                                                                     
~                                                                                                                                                     
~                                                                                                                                                     
~                                                                                                                                                     
~                                                                                                                                                     
~
