storage-services/infrastructure/server-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-api
spec:
  type: NodePort
  ports:
   - name: http
     port: 3003
     nodePort: 30006
     targetPort: 3003
     protocol: TCP
  selector:
    app: server
