storage-services/infrastructure/moral-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moral-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: client-service
          servicePort: 80
